add library, tests and readme

--- a/example/package.json
+++ b/example/package.json
@@ -5,16 +5,16 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "aphrodite": "^2.2.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-css-in-js-component": "link:..",
     "react-dom": "^16.4.1",
-    "react-scripts": "^1.1.4",
-    "react-css-in-js-component": "link:.."
+    "react-scripts": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
